WIP: Fix grid-displayed, unpublished paragraphs (like left-aligned sections) reverting to `display: block` when previewed

--- a/web/themes/custom/union_marketing/scss/components/_sections.scss
+++ b/web/themes/custom/union_marketing/scss/components/_sections.scss
@@ -42,5 +42,5 @@ figure.cu-media,
 }
 
 .paragraphs-previewer-html .cu-section.paragraph--unpublished {
-  display: unset;
+  display: revert;
 }
